# discord-undoc-theme

./: .gitignore  LICENSE  README.md  book.toml  pyproject.toml  tmp.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/: 404.html  book.js  demo.html  edgecases.html  empty.html  highlight.css  highlight.js  index.html  kbdcombo.html  mddemo.html  reference.html  searchindex.js  searchindex.json
docs/css/: chrome.css  general.css  variables.css
src/: 404.md  README.md  SUMMARY.md  chapter_1.md  chapter_2.md  demo.md  edgecases.md  empty.md  kbdcombo.md  mddemo.md  reference.md  scrollintoview.md  subchapter_1.md
theme/: book.js  discord_undoc.py  highlight.css  highlight.js  index.hbs  redirect.hbs
theme/css/: chrome.css  general.css  variables.css
