[tool.poetry]
name = "ddocstheme"
version = "0.1.0"
description = "Theme files for the Unofficial Discord Documentation"
authors = ["arHSM <hanseungmin.ar@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
mistletoe = "^0.8.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pyright = "^0.0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
